--- a/package.json
+++ b/package.json
@@ -1,18 +1,42 @@
 {
 	"name": "imgup",
+	"description": "Upload images and get a link to share them with your friends.",
 	"version": "1.0.0",
-	"description": "An image uploader API and website compatible with ShareX built in Node.js.",
-	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
-		"test": "nodemon index.js"
+		"dev": "next",
+		"build": "next build",
+		"start": "next start"
 	},
-	"author": "Sujal Goel",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/sujalgoel/imgup.git"
+	},
 	"license": "CC BY-NC-ND 4.0",
+	"author": "Sujal Goel <me@sujalgoel.me> (https://sujalgoel.me)",
+	"bugs": {
+		"url": "https://github.com/sujalgoel/imgup/issues"
+	},
+	"homepage": "https://github.com/sujalgoel/imgup#readme",
 	"dependencies": {
-		"cors": "^2.8.5",
-		"ejs": "^3.1.6",
-		"express": "^4.17.1",
-		"multer": "^1.4.3"
+		"next": "13.4.18",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-toastify": "9.1.3"
+	},
+	"devDependencies": {
+		"@types/node": "18.17.6",
+		"@types/react": "18.2.20",
+		"@types/react-dom": "18.2.7",
+		"@typescript-eslint/eslint-plugin": "6.4.0",
+		"@typescript-eslint/parser": "6.4.0",
+		"autoprefixer": "10.4.15",
+		"eslint": "8.47.0",
+		"eslint-config-next": "13.4.18",
+		"eslint-config-prettier": "9.0.0",
+		"eslint-plugin-prettier": "5.0.0",
+		"postcss": "8.4.28",
+		"prettier": "3.0.2",
+		"tailwindcss": "3.3.3",
+		"typescript": "5.1.6"
 	}
 }
