--- a/package.json
+++ b/package.json
@@ -18,25 +18,29 @@
 	},
 	"homepage": "https://github.com/sujalgoel/imgup#readme",
 	"dependencies": {
-		"next": "13.4.18",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-toastify": "9.1.3"
+		"@aws-sdk/client-s3": "^3.832.0",
+		"@heroicons/react": "2.2.0",
+		"@tailwindcss/postcss": "4.1.10",
+		"nanoid": "5.1.5",
+		"next": "^15.3.4",
+		"postcss": "8.5.6",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-toastify": "^11.0.5"
 	},
 	"devDependencies": {
-		"@types/node": "18.17.6",
-		"@types/react": "18.2.20",
-		"@types/react-dom": "18.2.7",
-		"@typescript-eslint/eslint-plugin": "6.4.0",
-		"@typescript-eslint/parser": "6.4.0",
-		"autoprefixer": "10.4.15",
-		"eslint": "8.47.0",
-		"eslint-config-next": "13.4.18",
-		"eslint-config-prettier": "9.0.0",
-		"eslint-plugin-prettier": "5.0.0",
-		"postcss": "8.4.28",
-		"prettier": "3.0.2",
-		"tailwindcss": "3.3.3",
-		"typescript": "5.1.6"
+		"@types/node": "^24.0.3",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"@typescript-eslint/eslint-plugin": "^8.34.1",
+		"@typescript-eslint/parser": "^8.34.1",
+		"autoprefixer": "^10.4.21",
+		"eslint": "^9.29.0",
+		"eslint-config-next": "^15.3.4",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-prettier": "^5.5.0",
+		"prettier": "^3.6.0",
+		"tailwindcss": "4.1.10",
+		"typescript": "^5.8.3"
 	}
 }
