--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"postcss": "8.5.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-toastify": "^11.0.5"
+		"react-toastify": "^11.0.5",
+		"sharp": "0.34.2"
 	},
 	"devDependencies": {
 		"@types/node": "^24.0.3",
